<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/searchFragment">

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.finalproject.ui.search.SearchFragment"
        android:label="@string/menu_search">

        <action
            android:id="@+id/action_searchFragment_to_photoDetailsFragment"
            app:destination="@id/photoDetails" />
    </fragment>

    <fragment
        android:id="@+id/savedPhotosFragment"
        android:name="com.example.finalproject.ui.savedPhotos.SavedPhotosFragment"
        android:label="@string/menu_savedRecipes"/>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.finalproject.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"/>

    <fragment
        android:id="@+id/photoDetails"
        android:name="com.example.finalproject.ui.search.photoDetails.PhotoDetailsFragment" />
</navigation>