<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionName="openPhotoDetails">

    <ImageView
        android:id="@+id/ivPhoto"
        android:layout_width="match_parent"
        android:layout_height="342dp"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ivPhoto"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="vertical"
        android:padding="16dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:paddingVertical="8dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvAuthorAvatarContainer"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    app:cardCornerRadius="28dp"
                    android:elevation="0dp"
                    android:padding="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent">

                    <ImageView
                        android:id="@+id/ivAuthorAvatar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/cvAuthorAvatarContainer"
                    android:layout_marginStart="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvAuthorUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tvAuthorName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvPhotoLikesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="22sp"
                android:text="@string/photo_details_likes"/>

            <TextView
                android:id="@+id/tvPhotoViewsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/tvPhotoLikesLabel"
                app:layout_constraintRight_toLeftOf="@id/tvPhotoDownloadsLabel"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="22sp"
                android:text="@string/photo_details_views"/>

            <TextView
                android:id="@+id/tvPhotoDownloadsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="22sp"
                android:text="@string/photo_details_downloads"/>

            <TextView
                android:id="@+id/tvPhotoLikes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPhotoLikesLabel"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvPhotoViews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/tvPhotoLikesLabel"
                app:layout_constraintRight_toLeftOf="@id/tvPhotoDownloadsLabel"
                app:layout_constraintTop_toBottomOf="@id/tvPhotoViewsLabel"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvPhotoDownloads"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPhotoDownloadsLabel"
                android:textSize="18sp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/ic_baseline_save_alt_24" />
</androidx.constraintlayout.widget.ConstraintLayout>